@@ -2,9 +2,11 @@
 ==========
 hcxpcaptool
 added new options
+-O <file> : output raw hccapx file
 --time-error-corrections  : maximum allowed time gap (default: 10000ms)
 --nonce-error-corrections : maximum allowed nonce gap (default: 8)
                           : should be the same value as in hashcat
+option -O is designed for third party tools which like to strip handshakes by themselves
 
 
 16.01.2018
